--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "homepage": "https://cosmicwolfe.github.io/shopify-movies",
+  "homepage": "http://cosmicwolfe.github.io/shopify-movies",
   "name": "shopify-movies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/preset-react": "^7.13.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -52,7 +51,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.9",
-    "gh-pages": "^3.1.0",
-    "jest": "^26.6.3"
+    "gh-pages": "^3.1.0"
   }
 }
