recommit small polishes
removed wrong package lock changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://cosmicwolfe.github.io/shopify-movies",
+  "homepage": "https://cosmicwolfe.github.io/shopify-movies",
   "name": "shopify-movies",
   "version": "0.1.0",
   "private": true,
